CMAKE_MINIMUM_REQUIRED(VERSION 3.11)
SET(BUILD_SHARED_LIBS OFF)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

PROJECT(Libee
        VERSION 2023.3.8
        LANGUAGES C CXX
        )
ADD_DEFINITIONS(-DOS_LINUX)

SET(TURTLE_SERVER_SRC_DIR ${PROJECT_SOURCE_DIR}/src)
SET(TURTLE_SERVER_SRC_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/include)
#SET(TURTLE_SERVER_TEST_DIR ${PROJECT_SOURCE_DIR}/test)
#SET(TURTLE_SERVER_TEST_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/test/include)
#SET(TURTLE_SERVER_DEMO_DIR ${PROJECT_SOURCE_DIR}/demo)

FILE(GLOB LIBEE_CORE_SOURCE RELATIVE ${CMAKE_SOURCE_DIR} "src/core/*.cpp")
ADD_LIBRARY(libee_core ${LIBEE_CORE_SOURCE})
TARGET_INCLUDE_DIRECTORIES(
    libee_core
    PUBLIC ${TURTLE_SERVER_SRC_INCLUDE_DIR}
)



