CMAKE_MINIMUM_REQUIRED(VERSION 3.11)
SET(BUILD_SHARED_LIBS OFF)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

PROJECT(libee
        VERSION 2023.3.8
        LANGUAGES C CXX
        )

ADD_DEFINITIONS(-DOS_LINUX)

SET(LIBEE_SRC_DIR ${PROJECT_SOURCE_DIR}/src)
SET(LIBEE_SRC_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/include)
SET(LIBEE_TEST_DIR ${PROJECT_SOURCE_DIR}/test)
#SET(LIBEE_TEST_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/test/include)
SET(LIBEE_DEMO_DIR ${PROJECT_SOURCE_DIR}/demo)

FILE(GLOB LIBEE_CORE_SOURCE RELATIVE ${CMAKE_SOURCE_DIR} "src/core/*.cpp")
ADD_LIBRARY(ee_core ${LIBEE_CORE_SOURCE})
TARGET_INCLUDE_DIRECTORIES(
    ee_core
    PUBLIC ${LIBEE_SRC_INCLUDE_DIR}
)

ADD_EXECUTABLE(demo_echo ${LIBEE_DEMO_DIR}/demo_echo.cpp)
TARGET_LINK_LIBRARIES(demo_echo ee_core)
TARGET_INCLUDE_DIRECTORIES(
    demo_echo
    PUBLIC ${LIBEE_SRC_INCLUDE_DIR}
)

ADD_EXECUTABLE(echo_cli ${LIBEE_DEMO_DIR}/echo_cli.cpp)
TARGET_LINK_LIBRARIES(echo_cli ee_core)
TARGET_INCLUDE_DIRECTORIES(
    echo_cli
    PUBLIC ${LIBEE_SRC_INCLUDE_DIR}
)



